--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,29 @@ jobs:
     - uses: actions/checkout@v4
     - name: go test
       run: "go test -v -race -coverprofile=coverage.txt -covermode=atomic ./..."
+  status-check:
+    runs-on: ubuntu-latest
+    needs:
+    - test
+    permissions: {}
+    if: failure()
+    steps:
+    - run: exit 1
+  enable-auto-merge:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # For enable automerge
+      pull-requests: write # For enable automerge
+    if: |
+      github.event.pull_request.user.login == 'renovate[bot]' && contains(github.event.pull_request.body, ' **Automerge**: Enabled.')
+    steps:
+    - name: Generate token
+      id: generate_token
+      uses: tibdex/github-app-token@v2.1.0
+      with:
+        app_id: ${{secrets.GH_APP_ID}}
+        private_key: ${{secrets.GH_APP_PRIVATE_KEY}}
+    - run: gh -R "$GITHUB_REPOSITORY" pr merge --squash --auto --delete-branch "$PR_NUMBER"
+      env:
+        GITHUB_TOKEN: ${{steps.generate_token.outputs.token}}
+        PR_NUMBER: ${{github.event.pull_request.number}}
